# wump

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  provider_request.yml  task.yml
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml  run_tests.py  seed.py
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/src/app/: main.py
api/src/app/core/: cache.py  config.py  database.py  logging.py  middleware.py  tracing.py
api/src/app/models/: __init__.py  api_key.py  base.py  dependency.py  organization.py  package.py  repository.py
api/src/app/providers/: __init__.py
api/src/app/repositories/: README.md  __init__.py  base.py  organization.py
api/src/tests/: conftest.py  factories.py  test_database.py  test_main.py  test_middleware.py
api/src/tests/core/: test_cache.py  test_database.py
api/src/tests/repositories/: test_base.py  test_organization.py
app/: __init__.py  main.py
app/core/: config.py
app/models/: __init__.py  api_key.py  base.py  dependency.py  repository.py
docs/: API_EXAMPLES.md  ARCHITECTURE.md  DEVELOPMENT.md  QUICKSTART.md  TROUBLESHOOTING.md
docs/private/coding/: REPOSITORY_README.md
scripts/: setup-github.sh
src/: index.ts
src/app/core/: logging.py
src/services/: libraries-io.service.ts
src/tests/: __init__.py
